fix(web/auth): 로그인 세션 정보 수정
